Add persistent basic types for model sets.